--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Optional Monads em java</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -25,7 +25,9 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<p>References https://dzone.com/articles/whats-wrong-java-8-part-iv https://gist.github.com/ms-tg/7420496 https://en.wikipedia.org/wiki/Monad_(functional_programming)</p>
+				</section>
 			</div>
 		</div>
 
