--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				<section>
 					<p>Adicionando comportamentos em OO</p>
 					<ul>
-						<li>Extensão</li>
-						<li>Composição</li>
+						<li>Extensão com herança</li>
+						<li>Composição com fields</li>
 					</ul>
 				</section>
 				<section>
